@@ -19,7 +19,8 @@
 ;     (1-16; 0 disables assignment)
 ;   - the DOUT pin to which the drum triggers are connected (0-7)
 ;   - the MIDI output port (0=disabled, 1=Default, 2=Internal, 3=IIC1, 4=IIC2, 5=IIC3, 6=IIC4, 7=Trigger Only)
-;   - the AOUT channel to output velocity (1-8, 0=disabled)
+;   - the AOUT/CV channel to output velocity (1-16, 0=disabled)
+;     Note: AOUT module only supports 8 highres channels, but CV outputs can also be realized with DOUTs (see DEFAULT_CV_DOUT* option)
 DEFAULT_TRKINFO MACRO
 	;;       Name     SR  Pin MPort AChn
 	db	"BD    ",  0,  0,   1,    0	; Track 1
@@ -228,6 +229,49 @@ DEFAULT_TRKINFO MACRO
 #define AOUT_LC_RESOLUTION_OPTION_M2 1
 #define AOUT_LC_RESOLUTION_OPTION_M3 1
 #define AOUT_LC_RESOLUTION_OPTION_M4 1
+
+
+;;
+;; CV values can also be output via DOUT shift registers
+;; This option is sufficient to control the "velocity" of drum instruments, and it's cheap as well!
+;; We expect following connections:
+;; 
+;;   DOUT      ca. 160k
+;;    D7 ---o---/\/\/\---*
+;;              ca. 80k  |
+;;    D6 ---o---/\/\/\---*
+;;              ca. 40k  |
+;;    D5 ---o---/\/\/\---*
+;;              ca. 20k  |
+;;    D4 ---o---/\/\/\---*
+;;              ca. 10k  |
+;;    D3 ---o---/\/\/\---*
+;;              ca. 5k   |
+;;    D2 ---o---/\/\/\---*----o CV Out
+;;              220 Ohm
+;;    D1 ---o---/\/\/\--------o free assignable trigger
+;;              220 Ohm
+;;    D0 ---o---/\/\/\--------o another free assignable trigger
+;; 
+;; The DOUTx channels are matching with the AOUT channels as specified in the DEFAULT_TRKINFO table above.
+;; Allowed values: 1-16 (selects DOUT shift register) or 0 to disable
+;; Ensure that DEFAULT_NUMBER_SR is high enough so that all DOUTs are updated.
+#define DEFAULT_CV_DOUT_SR1  0
+#define DEFAULT_CV_DOUT_SR2  0
+#define DEFAULT_CV_DOUT_SR3  0
+#define DEFAULT_CV_DOUT_SR4  0
+#define DEFAULT_CV_DOUT_SR5  0
+#define DEFAULT_CV_DOUT_SR6  0
+#define DEFAULT_CV_DOUT_SR7  0
+#define DEFAULT_CV_DOUT_SR8  0
+#define DEFAULT_CV_DOUT_SR9  0
+#define DEFAULT_CV_DOUT_SR10 0
+#define DEFAULT_CV_DOUT_SR11 0
+#define DEFAULT_CV_DOUT_SR12 0
+#define DEFAULT_CV_DOUT_SR13 0
+#define DEFAULT_CV_DOUT_SR14 0
+#define DEFAULT_CV_DOUT_SR15 0
+#define DEFAULT_CV_DOUT_SR16 0
 
 
 ;; 0: disables swing pot
