@@ -7,6 +7,9 @@ MIDIbox Seq Dr V1.3
 
    o added setup_seq_dr_default which is prepared for the MBSEQDR PCB
 
+   o DOUT pins in DEFAULT_TRKINFO table are now specified with the actual Dx number
+     (previously the pin number was mirrored (7-pin), this was leading to some confusion)
+
    o accent track now also increases velocity of outgoing MIDI notes
 
 
